Added form submission

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -94,6 +94,10 @@ img {
     margin-bottom: 1rem;
   }
 
+  .item-text-title {
+    margin-bottom: 1rem;
+  }
+
   a:hover {
     background-color: $medium-color;
   }
