--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,7 +1,7 @@
 // Tablets and smaller
 @media (max-width: 800px) {
   #header-home {
-    height: 30rem;
+    height: 100vh;
 
     .header-content {
       padding-top: 5rem;
@@ -22,7 +22,45 @@
 
   #header {
     &-home {
-      height: 10rem;
+      height: 100vh;
+    }
+  }
+
+  #projects {
+    .item-text-title {
+      font-size: 1rem;
+    }
+  }
+
+  #contact {
+    .text-fields {
+      display: grid;
+      grid-template-areas:
+        'name'
+        'email'
+        'message';
+      grid-gap: 1.2rem;
+      margin-bottom: 1.2rem;
+
+      // Grid Areas
+      .name-input {
+        grid-area: name;
+      }
+      .email-input {
+        grid-area: email;
+      }
+      .subject-input {
+        grid-area: subject;
+        display: none;
+      }
+      .phone-input {
+        grid-area: phone;
+        display: none;
+      }
+      .message-input {
+        grid-area: message;
+        height: 100px;
+      }
     }
   }
 }
