--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -10,7 +10,7 @@
 }
 
 // Smartphones
-@media (max-width: 500px) {
+@media (max-width: 400px) {
   #main-nav {
     flex-direction: column;
     align-items: center;
@@ -28,6 +28,12 @@
 
   #projects {
     .item-text-title {
+      font-size: 1rem;
+    }
+
+    a {
+      display: inline-block;
+      padding: 1rem;
       font-size: 1rem;
     }
   }
@@ -61,6 +67,12 @@
         grid-area: message;
         height: 100px;
       }
+    }
+  }
+
+  #main-footer {
+    p {
+      font-size: 0.7rem;
     }
   }
 }
