--- a/scss/main.scss
+++ b/scss/main.scss
@@ -80,7 +80,7 @@ img {
     // Header Content
     .header-content {
       text-align: center;
-      padding-top: 1rem;
+      padding-top: 20%;
 
       h1 {
         font-size: 4rem;
